# jfk-ocr

./: README.md  benchmark_results.json  pyproject.toml  rag.py  run_eval.py  temp.py
baseline/: reductoai.py
data/: ground_truth.json  ocr_result.json
evaluators/: __init__.py  evaluators.py  sentence_alignment.py
llms/: rft_fine_tune.py  sft_fine_tune.py
